--- a/resources/css/ceres-checkout.scss
+++ b/resources/css/ceres-checkout.scss
@@ -12479,6 +12479,7 @@ html.ios .basket-preview-content .totals { // stylelint-disable-line selector-no
         }
     }
 
+    .category-lowest-price,
     .category-unit-price {
         @include theme() { color: theme-get('font-color-secondary'); }
     }
@@ -15158,6 +15159,15 @@ html.safari .widget-grid .widget-inner-stacked .widget-inner { // stylelint-disa
 .language-detection {
     z-index: 200 !important;
     top: 0;
+
+    @include media-breakpoint-only(xs) {
+        .containder-max .d-flex {
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+        }
+    }
 }
 
 .navbar {
